tests/transpiler/x/hs/cross_join_triple.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (b, l, n)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
data GenType1 = GenType1
  { n :: String,
    l :: String,
    b :: String
  } deriving (Show)


bools = [True, False]

combos = [GenType1 {n = n, l = l, b = b} | n <- nums, l <- letters, b <- bools]

letters = ["A", "B"]

nums = [1, 2]

main :: IO ()
main = do
    putStrLn "--- Cross Join of three lists ---"
    mapM_ (\c -> do
        putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
        ) combos
